deploy/network-policy/monitoring/pg-exporter/allow-postgres-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-exporter-ingress-from-prometheus
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-pg-exporter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9187

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-exporter-to-pg
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-pg-exporter
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-postgresql
    ports:
    - protocol: TCP
      port: 5432

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-exporter-to-dns
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-pg-exporter
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP 
      port: 53
